<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ahmed.bakingapp.StepDetailsFragment">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/exo_player_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:visibility="gone" />


    <TextView
        android:id="@+id/tv_step_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        tools:text="asdsaddasdsadas" />


</LinearLayout>
